@@ -96,6 +96,7 @@
 :- import_module std_util.
 :- import_module store.
 :- import_module string.
+:- import_module svmap.
 :- import_module term.
 :- import_module term_io.
 :- import_module term_to_xml.
@@ -213,6 +214,7 @@ mercury_std_library_module("stack").
 mercury_std_library_module("std_util").
 mercury_std_library_module("store").
 mercury_std_library_module("string").
+mercury_std_library_module("svmap").
 mercury_std_library_module("table_builtin").
 mercury_std_library_module("term").
 mercury_std_library_module("term_io").
